[package]
name = "embedded-async"
version = "0.1.0"
authors = ["Andreas Wass <wass.andreas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["core_timer_duration", "embedded_time_u32"]
intrusive_list = []
core_timer_duration = []
embedded_time_u32 = ["embedded-time"]
embedded_time_u64 = ["embedded-time"]

[dependencies]
heapless = "0.5.5"
embedded-time = { version = "0.10.0", optional = true }

[dev-dependencies]
pin-utils = "0.1.0"
uio = { git = "https://github.com/AndWass/uio" }
